--- a/Films/src/app/components/register/register.component.html
+++ b/Films/src/app/components/register/register.component.html
@@ -4,7 +4,7 @@
     <input type="text" name="firstName" formControlName="firstName">
 
     <label for="">Apellido</label>
-    <input type="text" name="lastName" formControlName="lastName">
+    <input type="text" name="lastName" formControlName="lastName" value=" ">
 
     <label for="">DNI</label>
     <input type="text" name="DNI" formControlName="DNI">
