--- a/Films/src/app/components/register/register.component.html
+++ b/Films/src/app/components/register/register.component.html
@@ -1,21 +1,57 @@
-<form >
-    
+<form [formGroup]="userForm"  (ngSubmit)="onSubmit()">
     <label for="">Nombre</label>
-    <input type="text" name="firstName" formControlName="firstName">
+    <input type="text" name="firstName" formControlName="firstName" value="">
 
     <label for="">Apellido</label>
-    <input type="text" name="lastName" formControlName="lastName" value=" ">
+    <input type="text" name="lastName" formControlName="lastName" value="">
 
     <label for="">DNI</label>
-    <input type="text" name="DNI" formControlName="DNI">
+    <input type="text" name="DNI" formControlName="DNI" value="">
 
     <label for="">Email</label>
-    <input type="text" name="email" formControlName="email">
+    <input type="text" name="email" formControlName="email" value="">
 
     <label for="">Direccion</label>
-    <input type="text" name="adress" formControlName="adress">
+    <input type="text" name="adress" formControlName="adress" value="">
 
     <label for="">Contrasenia</label>
-    <input type="text" name="password" formControlName="password">
+    <input type="text" name="password" formControlName="password" value="">
 
+    <button type="submit" [disabled]="!userForm.valid" >Registrarse</button>
+
+    <section id="alertName">
+        <div *ngIf="!firstName.valid && (firstName.dirty || firstName.touched)">
+            El nombre es requerido
+        </div>
+    </section>
+
+    <section id="alertLastName">
+        <div *ngIf="!lastName.valid && (lastName.dirty || lastName.touched)">
+            El apellido es requerido
+        </div>
+    </section>
+
+    <section id="alertDNI">
+        <div *ngIf="!DNI.valid && (DNI.dirty || DNI.touched)">
+            El DNI es requerido
+        </div>
+    </section>
+
+    <section id="alertEmail">
+        <div *ngIf="!email.valid && (email.dirty || email.touched)">
+            El email es requerido
+        </div>
+    </section>
+
+    <section id="alertAddress">
+        <div *ngIf="!address.valid && (address.dirty || address.touched)">
+            La direccion es requerida
+        </div>
+    </section>
+
+    <section id="alertPassword">
+        <div *ngIf="!password.valid && (password.dirty || password.touched)">
+            La Contrasenia es requerida
+        </div>
+    </section>
 </form>
