--- a/Films/src/app/components/register/register.component.html
+++ b/Films/src/app/components/register/register.component.html
@@ -55,7 +55,7 @@
     </section>
 
 
-    <section id="alertAddress" class="alert alert-danger" *ngIf="addres?.invalid && (addres?.dirty || addres?.touched)">
+    <section id="alertAddress" class="alert alert-danger" *ngIf="address?.invalid && (address?.dirty || address?.touched)">
           <div *ngIf="address?.hasError('required')">La dirección es requerida</div>
     </section>
     
