--- a/Films/src/app/components/register/register.component.html
+++ b/Films/src/app/components/register/register.component.html
@@ -55,7 +55,6 @@
         </div>
     </section>
 
-
     <section id="alertAddress" class="alert alert-danger" *ngIf="address?.invalid && (address?.dirty || address?.touched)">
           <div *ngIf="address?.hasError('required')">La dirección es requerida</div>
     </section>
@@ -64,6 +63,10 @@
       <div *ngIf="password?.hasError('required')">La contraseña es requerida</div> <!-- L -->
       <div *ngIf="password?.hasError('minDosNumeros')">La contraseña debe contener mínimo 2 números</div> <!-- L -->
       <div *ngIf="password?.hasError('minlength')">La contraseña debe contener mínimo 6 caracteres</div> <!-- L -->
+    </section>
+
+    <section id="registroCorrectoONo">
+      {{mensajeRegistro}}
     </section>
 
 </form>
