Aside menu e incluido login registro y cobre nosotros

--- a/Films/src/app/app.component.html
+++ b/Films/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-login></app-login>
+<button class="btn btn-primary btn-lg" (click) = "navegarInicio ('inicio')">Inicio</button>
+<br>
+<app-aside-menu></app-aside-menu>
 <router-outlet></router-outlet>
+
