--- a/Films/src/app/components/aside-menu/aside-menu.component.html
+++ b/Films/src/app/components/aside-menu/aside-menu.component.html
@@ -1,3 +1,13 @@
-<h1>works!</h1>
-<router-outlet></router-outlet>
+<button class="menuLateral" (click)="toggleMenu()">
+    <img src="https://cdn-icons-png.flaticon.com/128/8106/8106985.png" alt="Imagen de menu">
+  </button>
+<div *ngIf="prendido">
+    <div class = "recuadro">
+        <button class="menuLateral sizeClass colorFondo" (click)="navegarLogin('login')">Login</button>
+        <button class="menuLateral sizeClass colorFondo" (click)="navegarRegister('registrarse')">Registrarse</button>
+        <button class="menuLateral sizeClass colorFondo" (click)="navegarComponente('sobre-nosotros')">Sobre Nosotros</button>
+    </div>
+ </div>
+  
+
   
