--- a/Films/src/app/components/sobre-nosotros/sobre-nosotros.component.css
+++ b/Films/src/app/components/sobre-nosotros/sobre-nosotros.component.css
@@ -1,12 +1,14 @@
-*{
-    align-items: center;
+table{
+    margin: 0 auto;
 }
+
 button {
     font-size: 40px;
     margin: 30px;
 }
 
 img {
-    height: 200px;
-    width: 200px;
+    height: 150px;
+    width: 150px;
+    margin-left: 30px;
 }
