--- a/Films/src/app/app.component.html
+++ b/Films/src/app/app.component.html
@@ -1,9 +1,6 @@
-<div>
-    <button class="btn btn-primary btn-lg" (click)="navegarInicio('inicio')">Inicio</button>
-    <br>
-    <app-aside-menu></app-aside-menu>
-    <router-outlet></router-outlet>
-  </div>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
+
   
   
 
