--- a/Films/src/app/components/navbar/navbar.component.html
+++ b/Films/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,9 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-lg" style="background-color: #20a9df;">
+    <table>
+        <tr><th><button (click)="navegarInicio('inicio')"><img src="https://i.imgur.com/14DiuDu.jpg" alt="Logo boton de inicio"></button></th></tr>
+        <tr><td><app-aside-menu class="app-aside-menu"></app-aside-menu></td></tr>
+    </table>
+  </nav>
+  
+  
+  
