Agregando componente barra de busqueda

--- a/Films/src/app/app.component.html
+++ b/Films/src/app/app.component.html
@@ -1,9 +1,7 @@
 <div>
-    <button class="btn btn-primary btn-lg" (click)="navegarInicio('inicio')">Inicio</button>
-    <br>
-    <app-aside-menu></app-aside-menu>
+    <app-barra-de-busqueda></app-barra-de-busqueda>
     <router-outlet></router-outlet>
-  </div>
+</div>
   
   
 
