--- a/Films/src/app/components/aside-menu/aside-menu.component.css
+++ b/Films/src/app/components/aside-menu/aside-menu.component.css
@@ -18,6 +18,14 @@ img{
     font-style: italic;
 }
 
+.fondo-desenfocado {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(82, 82, 82, 0.435);
+    z-index: 1;
+  }
+
 .sizeClass {
     font-size: 15px;
 }
