--- a/Films/src/app/components/navbar/navbar.component.html
+++ b/Films/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,11 @@
 <nav class="navbar navbar-expand-lg" style="background-color: #20a9df;">
     <table>
-        <tr><th><button (click)="navegarInicio('inicio')"><img src="https://i.imgur.com/14DiuDu.jpg" alt="Logo boton de inicio"></button></th></tr>
+        <tr>
+            <th><button (click)="navegarInicio('inicio')"><img src="https://i.imgur.com/14DiuDu.jpg" alt="Logo boton de inicio"></button></th>
+            <th><app-barra-de-busqueda class = "componente-esquina"></app-barra-de-busqueda></th>
+        </tr>
         <tr><td><app-aside-menu class="app-aside-menu"></app-aside-menu></td></tr>
+
     </table>
   </nav>
   
