--- a/Films/src/app/components/barra-de-busqueda/barra-de-busqueda.component.html
+++ b/Films/src/app/components/barra-de-busqueda/barra-de-busqueda.component.html
@@ -1,8 +1,10 @@
 <form>
-    <input type="text" [formControl] = "formControl" placeholder="Buscar Film...">
+    <input id="barra-busqueda" type="text" [formControl] = "formControl" placeholder="Buscar Film...">
 </form>
 <div>
-    <ul class = "estiloBusqueda" *ngFor="let film of filmsFiltradasPorBusqueda">
-        <li> {{ film.title }} </li>
+    <ul *ngFor="let film of filmsFiltradasPorBusqueda">
+        <li class="estiloBusqueda"> 
+            {{ film.title }} 
+            <img [src]="(getImageUrl(film.poster_path)) || 'ruta/por/defecto/sin/imagen.jpg'" alt="Poster" *ngIf="film.poster_path"></li>
     </ul>
 </div>
