--- a/Films/src/app/components/barra-de-busqueda/barra-de-busqueda.component.html
+++ b/Films/src/app/components/barra-de-busqueda/barra-de-busqueda.component.html
@@ -1,4 +1,4 @@
-<form>
+<!-- <form>
     <input id="barra-busqueda" type="text" [formControl] = "formControl" placeholder="Buscar Film...">
 </form>
 <div>
@@ -7,4 +7,4 @@
             {{ film.title }} 
             <img [src]="(getImageUrl(film.poster_path)) || 'ruta/por/defecto/sin/imagen.jpg'" alt="Poster" *ngIf="film.poster_path"></li>
     </ul>
-</div>
+</div> -->
