--- a/Films/src/app/components/barra-de-busqueda/barra-de-busqueda.component.html
+++ b/Films/src/app/components/barra-de-busqueda/barra-de-busqueda.component.html
@@ -5,6 +5,6 @@
     <ul *ngFor="let film of filmsFiltradasPorBusqueda">
         <li class="estiloBusqueda"> 
             {{ film.title }} 
-            <img src={{film.img}}  alt="Sin imagen" width="200rem" height="200rem"></li>
+            <img src={{film.image}}  alt="Sin imagen" width="200rem" height="200rem"></li>
     </ul>
 </div> 
