--- a/Films/src/app/components/barra-de-busqueda/barra-de-busqueda.component.html
+++ b/Films/src/app/components/barra-de-busqueda/barra-de-busqueda.component.html
@@ -1,8 +1,8 @@
 <form>
-    <!-- <input id="barra-busqueda" type="text" [formControl] = "formControl" placeholder="Buscar Film..."> -->
+    <input id="barra-busqueda" type="text" [formControl] = "formControl" placeholder="Buscar Film...">
 </form>
 <div>
-    <!-- <ul *ngFor="let film of filmsFiltradasPorBusqueda">
+    <ul *ngFor="let film of filmsFiltradasPorBusqueda">
         <li class="estiloBusqueda"> 
             {{ film.title }} 
             <img src={{film.image}}  alt="Sin imagen" width="200rem" height="200rem"></li>
