precio a las peliculas del metodo original

--- a/Films/src/app/components/aside-menu/aside-menu.component.html
+++ b/Films/src/app/components/aside-menu/aside-menu.component.html
@@ -5,7 +5,8 @@
     <div class = "recuadro">
         <button class="menuLateral sizeClass colorFondo" (click)="navegarLogin('login')" (click) = "toggleMenu()">Login</button>
         <button class="menuLateral sizeClass colorFondo" (click)="navegarRegister('registrarse')" (click) = "toggleMenu()">Registrarse</button>
-        <button class="menuLateral sizeClass colorFondo" (click)="navegarComponente('sobre-nosotros')" (click) = "toggleMenu()">Sobre Nosotros</button>
+        <button class="menuLateral sizeClass colorFondo" (click)="navegarSobreNosotros('sobre-nosotros')" (click) = "toggleMenu()">Sobre Nosotros</button>
+        <button class="menuLateral sizeClass colorFondo" (click)="navegarOfertas('sobre-nosotros')" (click) = "toggleMenu()">Ofertas</button>
     </div>
  </div>
   
