solcuionar precio random

--- a/Films/src/app/components/navbar/navbar.component.html
+++ b/Films/src/app/components/navbar/navbar.component.html
@@ -3,6 +3,7 @@
         <tr>
             <th><button (click)="navegarInicio('inicio')"><img src="https://i.imgur.com/14DiuDu.jpg" alt="Logo boton de inicio"></button></th>
             <th><app-barra-de-busqueda class = "componente-esquina"></app-barra-de-busqueda></th>
+            <th><button (click)="navegarCarrito('carrito')">🛒</button></th>
         </tr>
         <tr><td><app-aside-menu class="app-aside-menu"></app-aside-menu></td></tr>
     </table>
