Arreglando que se agregue al carrito desde barra de busqueda con la suma del service carrito, y tambien se puede agregar desde el inicio o cualquier lado que se necesite

--- a/Films/src/app/components/carrito/carrito.component.html
+++ b/Films/src/app/components/carrito/carrito.component.html
@@ -27,6 +27,9 @@
                         <button (click)="eliminarDelCarrito(pelicula)">Eliminar</button>
                     </td>
                 </tr>
+                <tr>
+                    <td><button (click)="limpiarCarrito()">Limpiar carrito</button></td>
+                </tr>
             </tbody>
         </table>
     </div>
