registro login traer datos asincronos funciona ver ultimas cosas xd

--- a/Films/src/app/components/login/login.component.html
+++ b/Films/src/app/components/login/login.component.html
@@ -28,5 +28,4 @@
           <div *ngIf="password?.hasError('minlength')">La contraseña debe contener mínimo 6 caracteres</div> <!-- L -->
     </section>
 </form>
-
-
+<button (click)="logout()">Cerrar sesión</button>
