--- a/Films/src/app/components/carrito/carrito.component.html
+++ b/Films/src/app/components/carrito/carrito.component.html
@@ -1,39 +1,44 @@
-<div class="container">
-    <h2>Carrito de Compras</h2>
-</div>
-<section class="padded">
+<div *ngIf="authService.isLoggedIn">
     <div class="container">
-        <table class="table table-bordered table-hover">
-            <thead>
-                <tr>
-                    <th>IMAGEN</th>
-                    <th>TITULO</th>
-                    <th>GENERO</th>
-                    <th>STORY</th>
-                    <th>RATING</th>
-                    <th>PRECIO</th>
-                    <th>Eliminar</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let pelicula of carritoDeCompras">
-                    <td><img [src]="pelicula.image" alt="Imagen de la película" width="50rem" height="50rem"></td>
-                    <td>{{ pelicula.title }}</td>
-                    <td>{{ pelicula.genre }}</td>
-                    <td>{{ pelicula.summary }}</td>
-                    <td>{{ pelicula.rating }}</td>
-                    <td>{{ pelicula.precio }}</td>
-                    <td>
-                        <button (click)="eliminarDelCarrito(pelicula)">Eliminar</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td><button (click)="limpiarCarrito()">Limpiar carrito</button></td>
-                </tr>
-            </tbody>
-        </table>
+            <h2>Carrito de Compras</h2>
+        </div>
+    <section class="padded">
+        <div class="container">
+            <table class="table table-bordered table-hover">
+                <thead>
+                    <tr>
+                        <th>IMAGEN</th>
+                        <th>TITULO</th>
+                        <th>GENERO</th>
+                        <th>STORY</th>
+                        <th>RATING</th>
+                        <th>PRECIO</th>
+                        <th>Eliminar</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let pelicula of carritoDeCompras">
+                        <td><img [src]="pelicula.image" alt="Imagen de la película" width="50rem" height="50rem"></td>
+                        <td>{{ pelicula.title }}</td>
+                        <td>{{ pelicula.genre }}</td>
+                        <td>{{ pelicula.summary }}</td>
+                        <td>{{ pelicula.rating }}</td>
+                        <td>{{ pelicula.precio }}</td>
+                        <td>
+                            <button (click)="eliminarDelCarrito(pelicula)">Eliminar</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><button (click)="limpiarCarrito()">Limpiar carrito</button></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
+    <div class="container">
+        <p>Total del Carrito: {{ totalCarrito | currency: 'ARS' }}</p>
     </div>
-</section>
-<div class="container">
-    <p>Total del Carrito: {{ totalCarrito | currency: 'ARS' }}</p>
+</div>
+    <div *ngIf="!authService.isLoggedIn">
+        <p>Debes iniciar sesión para acceder al carrito.</p>
 </div>
