ahora si funciona todo

--- a/Films/src/app/components/perfil/perfil.component.html
+++ b/Films/src/app/components/perfil/perfil.component.html
@@ -8,6 +8,6 @@
     <label for="">Nuevo Email</label>
     <input type="text" placeholder="Ingrese el nuevo email">
 
-    <button (click)="eliminarCuenta()"> Eliminar cuenta </button>
+    <button> Eliminar cuenta </button>
 
 </section>
