boton de usuario

--- a/Films/src/app/components/navbar/navbar.component.css
+++ b/Films/src/app/components/navbar/navbar.component.css
@@ -26,6 +26,16 @@ img{
     margin-right: 250px;
 }
 
+.componente-esquina-boton-user {
+    position: absolute;
+    top: 0;
+    right: 0;
+    size: 10px;
+    margin: 50px;
+    margin-right: 70px;
+}
+
+
 
 
 
