--- a/Films/src/app/components/navbar/navbar.component.html
+++ b/Films/src/app/components/navbar/navbar.component.html
@@ -4,8 +4,9 @@
             <th><button (click)="navegarInicio('inicio')"><img src="https://i.imgur.com/14DiuDu.jpg" alt="Logo boton de inicio"></button></th>
             <th><app-barra-de-busqueda class = "componente-esquina"></app-barra-de-busqueda></th>
             <th><button class = "componente-esquina-boton-carrito" (click)="navegarCarrito()">🛒</button></th>
+            <th><app-user-aside class = "componente-esquina-boton-user"></app-user-aside></th>
         </tr>
-        <tr><td><app-aside-menu class="app-aside-menu"></app-aside-menu></td></tr>
+        <tr><td><app-aside-menu></app-aside-menu></td></tr>
     </table>
   </nav>
   
