funciona que no agregue nada si no esta logueado, solucionado el tema de un usuario sin registrarse agregue pelis a la siguiente cuenta logueada

--- a/Films/src/app/components/user-aside/user-aside.component.html
+++ b/Films/src/app/components/user-aside/user-aside.component.html
@@ -8,6 +8,9 @@
         <br>
         <button class="menuLateral sizeClass colorFondo" (click)="navegarRegister('registrarse')" (click)="toggleMenu()">Registrarse</button>
     </ng-container>
-    
+    <ng-container *ngIf="userService.isLoggedIn">
+    <button class="menuLateral sizeClass colorFondo" (click)="logout()" (click)="toggleMenu()">Cerrar sesion</button>
+    </ng-container>
 </div>
+
 
