--- a/Films/src/app/components/aside-menu/aside-menu.component.html
+++ b/Films/src/app/components/aside-menu/aside-menu.component.html
@@ -3,8 +3,9 @@
 </button>
 <div class="fondo-desenfocado" *ngIf="prendido">
   <div class="recuadro">
-    <button class="menuLateral sizeClass colorFondo" (click)="navegarSobreNosotros('sobre-nosotros')" (click)="toggleMenu()">Sobre Nosotros</button>
     <button class="menuLateral sizeClass colorFondo" (click)="navegarOfertas('ofertas')" (click)="toggleMenu()">Ofertas</button>
+    <button class="menuLateral sizeClass colorFondo" (click)="navegarSobreNosotros('sobre-nosotros')" (click)="toggleMenu()">Sobre Nosotros</button>
+    <button class="menuLateral sizeClass colorFondo" (click)="navegarCategorias('categorias')" (click)="toggleMenu()">Categorias</button>
   </div>
 </div>
 
