funcionalidad de eliminar cuenta y ver detalles de user

--- a/Films/src/app/components/eliminar-cuenta/eliminar-cuenta.component.html
+++ b/Films/src/app/components/eliminar-cuenta/eliminar-cuenta.component.html
@@ -1,1 +1,8 @@
-
+<section>
+    <h3>Sobre tu Cuenta</h3>
+    <div id="eliminar-cuenta">
+        <button (click)="eliminarCuenta()">Eliminar Cuenta</button>
+        <div id="opciones"></div>
+        <div> {{result}}</div>
+    </div>
+</section>
