intentando hacer cambio de email

--- a/Films/src/app/app.component.html
+++ b/Films/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<app-eliminar-cuenta></app-eliminar-cuenta>
+<app-cambiar-email></app-cambiar-email>
 <router-outlet></router-outlet>
 
   
