--- a/Films/src/app/components/user-aside/user-aside.component.css
+++ b/Films/src/app/components/user-aside/user-aside.component.css
@@ -12,11 +12,13 @@ img{
 }
 
 .sizeClass {
-    font-size: 15px;
+    font-size: 20px;
 }
 
 .colorFondo {
     background-color: rgb(129, 168, 240);
+    padding-right: 50px;
+    display: inline-block;
 }
 
 .fondo-desenfocado {
